# nramirezuy.github.io

./: .gitignore  .pre-commit-config.yaml  Makefile  pelicanconf.py  publishconf.py  pyproject.toml  tasks.py
.github/workflows/: deploy.yml
